fixed: card width on Firefox

--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -2,4 +2,5 @@
   position: relative;
   max-width: 282px;
   max-height: 361px;
+  width: 100%;
 }
